--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="public/index.css">
   <title>auto</title>
 </head>
+
 <body>
-  
+  <header class="header">
+    <div class="header__top">
+      <div class="container">
+        <div class="header__top-inner">
+          <a class="header__logo">
+            <img src="images/logo/Logo_black.svg" alt="logo">
+          </a>
+          <nav class="header__nav">
+            <ul class="header__nav-list">
+              <li class="header__nav-item"><a class="header__nav-link" href="#">Home</a></li>
+              <li class="header__nav-item"><a class="header__nav-link" href="#">About us</a></li>
+              <li class="header__nav-item"><a class="header__nav-link" href="#">Services</a></li>
+              <li class="header__nav-item"><a class="header__nav-link" href="#">Blog</a></li>
+              <li class="header__nav-item"><a class="header__nav-link" href="#">Contact</a></li>
+            </ul>
+          </nav>
+          <div class="header__line"></div>
+          <div class="header__contact">
+            <div class="header__contact-name">Road Assistance</div>
+            <a class="header__contact-tel" href="tel:">1800 265 24 52</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+  <main></main>
+  <footer></footer>
 </body>
+
 </html>
