В работе header body

--- a/index.html
+++ b/index.html
@@ -13,22 +13,47 @@
     <div class="header__top">
       <div class="container">
         <div class="header__top-inner">
-          <a class="header__logo">
+          <a class="header__logo" href="#">
             <img src="images/logo/Logo_black.svg" alt="logo">
           </a>
           <nav class="header__nav">
             <ul class="header__nav-list">
-              <li class="header__nav-item"><a class="header__nav-link" href="#">Home</a></li>
-              <li class="header__nav-item"><a class="header__nav-link" href="#">About us</a></li>
-              <li class="header__nav-item"><a class="header__nav-link" href="#">Services</a></li>
-              <li class="header__nav-item"><a class="header__nav-link" href="#">Blog</a></li>
-              <li class="header__nav-item"><a class="header__nav-link" href="#">Contact</a></li>
+              <li class="header__nav-item"><a href="#">Home</a></li>
+              <li class="header__nav-item"><a href="#">About us</a></li>
+              <li class="header__nav-item"><a href="#">Services</a></li>
+              <li class="header__nav-item"><a href="#">Blog</a></li>
+              <li class="header__nav-item"><a href="#">Contact</a></li>
             </ul>
           </nav>
           <div class="header__line"></div>
           <div class="header__contact">
             <div class="header__contact-name">Road Assistance</div>
             <a class="header__contact-tel" href="tel:">1800 265 24 52</a>
+          </div>
+        </div>
+      </div>
+      <div class="header__body">
+        <div class="container">
+          <div class="header__body-inner">
+            <div class="header__content">
+              <h1 class="header__titel">Get your vehicle service done online at one place</h1>
+              <div class="header__btn-box">
+                <a class="header__btn button" href="#">Book a service</a>
+                <a class="header__btn--transp" href="#">Play Video</a>
+              </div>
+              <div class="header__status">
+                <div class="header__status-open">We are open </div>
+                <div class="header__status-work">Monday to Friday 9:00 AM to 10:00 AM</div>
+              </div>
+            </div>
+            <div class="header__img-box">
+
+              <img src="images/photo/header.png" alt="decoration">
+              <div class="header__info-box">
+                <span>Quick service</span>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
