Добавлен и подключен плагин reteYo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.4/jquery.rateyo.min.css">
   <link rel="stylesheet" href="public/index.css">
   <title>auto</title>
 </head>
@@ -47,10 +48,16 @@
               </div>
             </div>
             <div class="header__img-box">
-
               <img src="images/photo/header.png" alt="decoration">
               <div class="header__info-box">
                 <span>Quick service</span>
+              </div>
+              <div class="header__rate-box">
+                <div class="header__rate-item">
+                  <div class="header__rate-num">4.5/5</div>
+                  <div class="header__rate-name">Rating</div>
+                </div>
+                <div class="header__rate-item" id="demo"></div>
               </div>
             </div>
 
@@ -62,5 +69,8 @@
   <main></main>
   <footer></footer>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.4/jquery.rateyo.min.js"></script>
+<script src="js/main.js"></script>
 
 </html>
