Добаленна секция follow

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="offer__inner">
           <div class="offer__heading heading heading--center">
             <p class="heading__uptitle">What we Offer</p>
-            <h2 class="heading__title">We offer full service auto repair & maintenance</h2>
+            <h2 class="heading__title title--center">We offer full service auto repair & maintenance</h2>
           </div>
           <ul class="offer__grid">
             <li class="offer__grid-item">
@@ -207,6 +207,47 @@
             </svg>
 
           </a>
+        </div>
+      </div>
+    </section>
+    <section class="main__follow follow">
+      <div class="container">
+        <div class="follow__inner">
+          <div class="follow__inner-info">
+            <div class="follow__heading heading">
+              <h2 class="heading__title">We follow a clear process to help you out.</h2>
+              <p class="heading__follow-text">Through True Rich Attended does no end it his mother since real had half
+                every him case in packages enquire</p>
+            </div>
+            <a class="follow__btn button" href="#">Learn more</a>
+          </div>
+          <div class="follow__inner-steps">
+            <div class="follow__steps-item">
+              <div class="follow__steps-num">01 <span></span></div>
+              <div class="follow__steps-info">
+                <div class="follow__steps-name">Get a Quote</div>
+                <div class="follow__steps-text">Through True Rich Attended does no end it his mother since real had
+                  half
+                  every.</div>
+              </div>
+            </div>
+            <div class="follow__steps-item">
+              <div class="follow__steps-num">02<span></span></div>
+              <div class="follow__steps-info">
+                <div class="follow__steps-name">Book an Appointment</div>
+                <div class="follow__steps-text">Through True Rich Attended does no end it his mother since real had
+                  half every.</div>
+              </div>
+            </div>
+            <div class="follow__steps-item">
+              <div class="follow__steps-num">03</div>
+              <div class="follow__steps-info">
+                <div class="follow__steps-name">Get your Service Done</div>
+                <div class="follow__steps-text">Through True Rich Attended does no end it his mother since real had
+                  half every.</div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
