Добавленна секция contact-promo

--- a/index.html
+++ b/index.html
@@ -251,6 +251,30 @@
         </div>
       </div>
     </section>
+    <section class="main__contact-promo contact-promo">
+      <div class="container">
+        <div class="contact-promo__inner">
+          <div class="heading__title-content">
+            <h3 class="contact-promo__heading">Get in touch with us for your service related query</h3>
+            <a class="contact-promo__btn button" href="#">Contact Us</a>
+          </div>
+        </div>
+        <ul class="contact-promo__row">
+          <li class="contact-promo__row-item">
+            <span>20+</span>Proffesional
+          </li>
+          <li class="contact-promo__row-item">
+            <span>10+</span>Years Eperience
+          </li>
+          <li class="contact-promo__row-item">
+            <span>12K+</span>Service Closed
+          </li>
+          <li class="contact-promo__row-item">
+            <span>100%</span>Customer Satisfaction
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
