Добавленна секция blog

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.4/jquery.rateyo.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox/fancybox.css" />
   <link rel="stylesheet" href="public/index.css">
   <title>auto</title>
 </head>
@@ -40,7 +41,8 @@
               <h1 class="header__titel">Get your vehicle service done online at one place</h1>
               <div class="header__btn-box">
                 <a class="header__btn button" href="#">Book a service</a>
-                <a class="header__btn--transp" href="#">Play Video</a>
+                <a class="header__btn--transp" data-fancybox href="https://www.youtube.com/watch?v=eMhhl1Wq8JA">Play
+                  Video</a>
               </div>
               <div class="header__status">
                 <div class="header__status-open">We are open </div>
@@ -278,7 +280,7 @@
     <section class="main__brands brands">
       <div class="container">
         <div class="brands__inner">
-          <h2 class="heading__title">Brands we Serve</h2>
+          <h2 class="heading__title blog__title">Brands we Serve</h2>
           <ul class="brands__grid">
             <li class="brands__list-item">
               <a href="#" class="brands__list-link">
@@ -570,11 +572,129 @@
         </div>
       </div>
     </section>
+    <section class="main__blog blog">
+      <div class="container">
+        <div class="blog__inner">
+          <h2 class="heading__title">Our blog</h2>
+          <ul class="blog__filter">
+            <li class="blog__filter-item"><a href="#">Latest</a></li>
+            <li class="blog__filter-item"><a href="#">Popular</a></li>
+            <li class="blog__filter-item"><a href="#">Favorites</a></li>
+          </ul>
+          <ul class="blog__card">
+            <li class="blog__card-item">
+              <a href="#" class="blog__card-link">
+                <img src="images/photo/blog_1.png" alt="decoration">
+                <div class="blog__card-content">
+                  <div class="blog__card-date">
+                    Posted on October 6th 2021
+                  </div>
+                  <h4 class="blog__card-titel">
+                    5 Genius Car Accessories You Should Never Drive Without
+                  </h4>
+                  <div class="blog__card-text">
+                    We provide a full range of front end mechanical repairs for all makes and models We provide a full
+                    range of front end mechanical repairs for all makes and models
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li class="blog__card-item">
+              <a href="#" class="blog__card-link">
+                <img src="images/photo/blog_2.png" alt="decoration">
+                <div class="blog__card-content">
+                  <div class="blog__card-date">
+                    Posted on October 6th 2021
+                  </div>
+                  <h4 class="blog__card-titel">
+                    5 Genius Car Accessories You Should Never Drive Without
+                  </h4>
+                  <div class="blog__card-text">
+                    We provide a full range of front end mechanical repairs for all makes and models We provide a full
+                    range of front end mechanical repairs for all makes and models
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li class="blog__card-item">
+              <a href="#" class="blog__card-link">
+                <img src="images/photo/blog_3.png" alt="decoration">
+                <div class="blog__card-content">
+                  <div class="blog__card-date">
+                    Posted on October 6th 2021
+                  </div>
+                  <h4 class="blog__card-titel">
+                    We provide blow straight past it with the wheels skidding
+                  </h4>
+                  <div class="blog__card-text">
+                    We provide a full range of front end mechanical repairs for all makes and models We provide a full
+                    range of front end mechanical repairs for all makes and models
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li class="blog__card-item">
+              <a href="#" class="blog__card-link">
+                <img src="images/photo/blog_4.png" alt="decoration">
+                <div class="blog__card-content">
+                  <div class="blog__card-date">
+                    Posted on October 6th 2021
+                  </div>
+                  <h4 class="blog__card-titel">
+                    We provide blow straight past it with the wheels skidding
+                  </h4>
+                  <div class="blog__card-text">
+                    We provide a full range of front end mechanical repairs for all makes and models We provide a full
+                    range of front end mechanical repairs for all makes and models
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li class="blog__card-item">
+              <a href="#" class="blog__card-link">
+                <img src="images/photo/blog_5.png" alt="decoration">
+                <div class="blog__card-content">
+                  <div class="blog__card-date">
+                    Posted on October 6th 2021
+                  </div>
+                  <h4 class="blog__card-titel">
+                    5 Genius Car Accessories You Should Never Drive Without
+                  </h4>
+                  <div class="blog__card-text">
+                    We provide a full range of front end mechanical repairs for all makes and models We provide a full
+                    range of front end mechanical repairs for all makes and models
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li class="blog__card-item">
+              <a href="#" class="blog__card-link">
+                <img src="images/photo/blog_6.png" alt="decoration">
+                <div class="blog__card-content">
+                  <div class="blog__card-date">
+                    Posted on October 6th 2021
+                  </div>
+                  <h2 class="blog__card-titel">
+                    5 Genius Car Accessories You Should Never Drive Without
+                  </h2>
+                  <div class="blog__card-text">
+                    We provide a full range of front end mechanical repairs for all makes and models We provide a full
+                    range of front end mechanical repairs for all makes and models
+                  </div>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.4/jquery.rateyo.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox/fancybox.umd.js"></script>
 <script src="js/main.js"></script>
+
 
 </html>
