Начата секция review

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.4/jquery.rateyo.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox/fancybox.css" />
+  <link rel="stylesheet" type="text/css" href="slick/slick.css" />
   <link rel="stylesheet" href="public/index.css">
   <title>auto</title>
 </head>
@@ -688,13 +689,75 @@
         </div>
       </div>
     </section>
+    <section class="review main__review">
+      <div class="container">
+        <div class="review__inner">
+          <h2 class="heading__title review__heading heading--center">Our customers say the nicest things about our
+            service</h2>
+          <div class="review__card-slider">
+            <div class="review__card">
+              <div class="review__card-user">
+                <div class="review__avatar">
+                  <img src="images/photo/Jonathan.png" alt="foto">
+                </div>
+                <div class="review__user-info">
+                  <div class="review__user-name">Jonathan Vallem</div>
+                  <div class="review__user-location">New york</div>
+                </div>
+              </div>
+              <p class="review__card-text">I have got my car repaired at Finsweet many times before, they are good at
+                what they do. Not only did they repair my car in a short comprehensive look on all the working</p>
+            </div>
+            <div class="review__card">
+              <div class="review__card-user">
+                <div class="review__avatar">
+                  <img src="images/photo/Jonathan.png" alt="foto">
+                </div>
+                <div class="review__user-info">
+                  <div class="review__user-name">Jonathan Vallem</div>
+                  <div class="review__user-location">New york</div>
+                </div>
+              </div>
+              <p class="review__card-text">I have got my car repaired at Finsweet many times before, they are good at
+                what they do. Not only did they repair my car in a short comprehensive look on all the working</p>
+            </div>
+            <div class="review__card">
+              <div class="review__card-user">
+                <div class="review__avatar">
+                  <img src="images/photo/Jonathan.png" alt="foto">
+                </div>
+                <div class="review__user-info">
+                  <div class="review__user-name">Jonathan Vallem</div>
+                  <div class="review__user-location">New york</div>
+                </div>
+              </div>
+              <p class="review__card-text">I have got my car repaired at Finsweet many times before, they are good at
+                what they do. Not only did they repair my car in a short comprehensive look on all the working</p>
+            </div>
+            <div class="review__card">
+              <div class="review__card-user">
+                <div class="review__avatar">
+                  <img src="images/photo/Jonathan.png" alt="foto">
+                </div>
+                <div class="review__user-info">
+                  <div class="review__user-name">Jonathan Vallem</div>
+                  <div class="review__user-location">New york</div>
+                </div>
+              </div>
+              <p class="review__card-text">I have got my car repaired at Finsweet many times before, they are good at
+                what they do. Not only did they repair my car in a short comprehensive look on all the working</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.4/jquery.rateyo.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox/fancybox.umd.js"></script>
 <script src="js/main.js"></script>
-
 
 </html>
