Дабвленна секция quesrions

--- a/index.html
+++ b/index.html
@@ -771,6 +771,90 @@
         </div>
       </div>
     </section>
+    <section class="questions main__questions">
+      <div class="container">
+        <div class="questions__iiner">
+          <h2 class="heading__title questions__heading heading--center">Frequently Asked Questions</h2>
+          <ul class="questions__acc">
+            <li class="questions__acc-item">
+              <a class="questions__acc-link " href="#">
+                <div class="questions__acc-content ">
+                  <h5 class="questions__acc-heading">How long should a car repair take?</h5>
+                  <div class="questions__acc-icon">
+
+                  </div>
+                </div>
+                <p class="questions__acc-text">I have got my car repaired at Finsweet many times before, they are good
+                  at
+                  what they do. Not only did they repair my car I have got my car repaired at Finsweet I have got my
+                  car
+                  repaired at Finsweet</p>
+              </a>
+            </li>
+            <li class="questions__acc-item">
+              <a class="questions__acc-link " href="#">
+                <div class="questions__acc-content ">
+                  <h5 class="questions__acc-heading">How do I schedule my car's appointment ?</h5>
+                  <div class="questions__acc-icon">
+
+                  </div>
+                </div>
+                <p class="questions__acc-text">I have got my car repaired at Finsweet many times before, they are good
+                  at
+                  what they do. Not only did they repair my car I have got my car repaired at Finsweet I have got my
+                  car
+                  repaired at Finsweet</p>
+              </a>
+            </li>
+            <li class="questions__acc-item">
+              <a class="questions__acc-link " href="#">
+                <div class="questions__acc-content ">
+                  <h5 class="questions__acc-heading">What are the repair services provided?</h5>
+                  <div class="questions__acc-icon">
+
+                  </div>
+                </div>
+                <p class="questions__acc-text">I have got my car repaired at Finsweet many times before, they are good
+                  at
+                  what they do. Not only did they repair my car I have got my car repaired at Finsweet I have got my
+                  car
+                  repaired at Finsweet</p>
+              </a>
+            </li>
+            <li class="questions__acc-item">
+              <a class="questions__acc-link " href="#">
+                <div class="questions__acc-content ">
+                  <h5 class="questions__acc-heading">How do I find auto body shops near me?</h5>
+                  <div class="questions__acc-icon">
+
+                  </div>
+                </div>
+                <p class="questions__acc-text">I have got my car repaired at Finsweet many times before, they are good
+                  at
+                  what they do. Not only did they repair my car I have got my car repaired at Finsweet I have got my
+                  car
+                  repaired at Finsweet</p>
+              </a>
+            </li>
+            <li class="questions__acc-item">
+              <a class="questions__acc-link " href="#">
+                <div class="questions__acc-content ">
+                  <h5 class="questions__acc-heading">Genuine spare parts during car repair?</h5>
+                  <div class="questions__acc-icon">
+
+                  </div>
+                </div>
+                <p class="questions__acc-text">I have got my car repaired at Finsweet many times before, they are good
+                  at
+                  what they do. Not only did they repair my car I have got my car repaired at Finsweet I have got my
+                  car
+                  repaired at Finsweet</p>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
