Добавленна секция contact

--- a/index.html
+++ b/index.html
@@ -855,6 +855,41 @@
         </div>
       </div>
     </section>
+    <section class="main__contact-form contact-form">
+      <div class="container">
+        <div class="contact-form__inner">
+          <h2 class="heading__title contact-form__heading">Get in touch with our experts</h2>
+          <div class="contact-form__content">
+            <form class="contact-form__form" action="">
+              <input class="contact-form__input" type="text" placeholder="Your full Name" required>
+              <input class="contact-form__input" type="email" placeholder="Your Email" required>
+              <input class="contact-form__input" type="text" placeholder="Select service type">
+              <input class="contact-form__input" type="text" placeholder="Message" required>
+              <button class="contact-form__button button">Send message</button>
+            </form>
+            <ul class="contact-form__info">
+              <li class="contact-form__info-item">
+                <div class="contact-form__info-name">Address</div>
+                <a href="" class="contact-form__link">NH 234 Public Square San Francisco 65368</a>
+              </li>
+              <li class="contact-form__info-item">
+                <div class="contact-form__info-name">Contact Details</div>
+                <a href="" class="contact-form__link">1800 265 24 52</a>
+                <a href="" class="contact-form__link">Finsweet@gmail.com</a>
+              </li>
+              <li class="contact-form__info-item">
+                <div class="contact-form__info-name">Opening Hours</div>
+                <a href="" class="contact-form__link">Monday to Friday 9:00 AM to 10:00 AM</a>
+              </li>
+            </ul>
+          </div>
+          <div class="contact-form__map-box"><iframe
+              src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d17110.86741743604!2d-74.0136962803636!3d40.70034504203195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sth!4v1751010292986!5m2!1sru!2sth"
+              width="1280" height="512" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
